syntax = "proto3";

package user;

option go_package = "github.com/4yrg/gradeloop-core/libs/proto/user";

service UserService {
  // Profile Management
  rpc GetProfile (GetProfileRequest) returns (UserProfile);
  rpc UpdateProfile (UpdateProfileRequest) returns (UserProfile);

  // Institute Management
  rpc CreateInstitute (CreateInstituteRequest) returns (Institute);
  
  // User Creation (Orchestration)
  rpc CreateInstituteAdmin (CreateUserRequest) returns (UserResponse);
  rpc CreateInstructor (CreateUserRequest) returns (UserResponse);
  rpc CreateStudent (CreateUserRequest) returns (UserResponse);
  rpc BulkImport (BulkImportRequest) returns (BulkImportResponse);

  // Authentication Internal
  rpc ValidateCredentials (ValidateCredentialsRequest) returns (ValidateCredentialsResponse);
  rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse);
}

message UserProfile {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string institute_id = 5;
  string role = 6;
  string avatar_url = 7;
}

message GetProfileRequest {
  string user_id = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string avatar_url = 4;
}

message Institute {
  string id = 1;
  string name = 2;
  string code = 3;
  string domain = 4;
}

message CreateInstituteRequest {
  string name = 1;
  string code = 2;
  string domain = 3;
  string admin_email = 4;
}

message CreateUserRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
  string institute_id = 4;
  // Specific fields
  string enrollment_number = 5; // For students
  string specialization = 6; // For instructors
}

message UserResponse {
  string user_id = 1;
  string email = 2;
  string temp_password = 3; 
}

message BulkImportRequest {
  string institute_id = 1;
  bytes csv_data = 2;
}

message BulkImportResponse {
  int32 success_count = 1;
  int32 failure_count = 2;
  repeated string errors = 3;
}

message ValidateCredentialsRequest {
  string email = 1;
  string password = 2;
}

message ValidateCredentialsResponse {
  bool valid = 1;
  UserResponse user = 2; // Reuse UserResponse or define minimal user info
}

message UpdatePasswordRequest {
  string user_id = 1;
  string new_password = 2;
}

message UpdatePasswordResponse {
  bool success = 1;
}
